# FlowModus

./: .env.example  .gitignore  LICENSE  README.md  README.zh_CN.md  README.zh_CNj.md  pyproject.toml
docs/: local_registry.example.json  whitepaper-v1.7.md
docs/engineering-manual/: v1.1.3.md
schemas/: gossip.proto  metrics.proto  registry.proto  routing.proto  supplier.proto
src/flowmodus/: __init__.py  lifecycle.py
src/flowmodus/cli/: entrypoint.py
src/flowmodus/config/: bias.py
src/flowmodus/control_plane/: __init__.py  anti_corruption.py  canonicalizer.py  ipfs_client.py  verifier.py
src/flowmodus/data_plane/: __init__.py  http_utils.py  proxy.py
src/flowmodus/data_plane/pipeline/: __init__.py  layer1_normalize.py  layer2_registry.py  layer3_cost.py  layer4_filter.py  layer5_score.py
src/flowmodus/data_plane/telemetry/: __init__.py  collector.py  deviation.py
src/flowmodus/gossip/: __init__.py  broadcaster.py
src/flowmodus/schemas/: gossip_pb2.py  gossip_pb2.pyi  metrics_pb2.py  metrics_pb2.pyi  registry_pb2.py  registry_pb2.pyi  routing_pb2.py  routing_pb2.pyi  supplier_pb2.py  supplier_pb2.pyi
tests/: test_sidecar_lifecycle.py
tests/control_plane/: test_verifier.py
tests/data_plane/: test_invisible_retry.py  test_proxy.py
tests/data_plane/telemetry/: test_deviation.py
tests/pipeline/: test_layer1_normalize.py  test_pipeline_determinism.py  test_priority_cascade.py
tools/: aggregate_signatures.py  sign_update.sh
