[project]
name = "flowmodus"
version = "1.1.2"
description = "Deterministic routing sidecar for LLM providers"
authors = [
  { name="FlowModus Team", email="team@flowmodus.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography==42.0.5",
  "protobuf==5.26.1",
  "httpx==0.27.0",
  "aiohttp==3.9.5",
]

[project.scripts]
flowmodus = "flowmodus.cli.entrypoint:main"

[tool.uv]
dev-dependencies = [
  "pytest==8.2.0",
  "grpcio-tools==1.64.0",
]
src = ["src"]
